--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,7 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/colorPrimary">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -15,49 +16,52 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Login"
-            android:textSize="25sp"
-            android:textColor="@color/colorPrimary"
-            android:textStyle="bold"
-            />
+        <ImageView
+            android:layout_width="@dimen/login_icon_w"
+            android:layout_height="@dimen/login_icon_h"
+            android:src="@drawable/splash_icon"/>
 
         <LinearLayout
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
             android:orientation="vertical"
             android:padding="15dp"
-            android:layout_marginTop="50dp"
             >
             <TextView
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
                 android:text="Username"
+                android:textColor="@android:color/white"
                 />
             <EditText
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
                 android:id="@+id/edtUsername"
+                android:layout_marginLeft="-4dp"
+                android:layout_marginRight="-4dp"
+                android:textColor="@android:color/white"
                 />
             <TextView
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
                 android:text="Password"
+                android:textColor="@android:color/white"
                 />
             <EditText
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
                 android:id="@+id/edtPassword"
                 android:inputType="textPassword"
+                android:layout_marginLeft="-4dp"
+                android:layout_marginRight="-4dp"
+                android:textColor="@android:color/white"
                 />
             <Button
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
                 android:id="@+id/btn_login"
                 android:text="Login"
-                android:background="@color/colorPrimary"
+                android:background="@color/colorAccent"
                 android:layout_marginTop="20dp"
                 android:onClick="doLogin"
                 />
@@ -75,6 +79,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        android:textColor="@android:color/white"
+        android:onClick="doRegistration"
         />
 
 </android.support.constraint.ConstraintLayout>
